2010-04-02 v1.2.0
	* Added support to xml serialization
	* Internal changes
----------------------------------------
2010-04-01 v1.1.0
	* Some changes to ensure thread safety (thanks to Rafael Ferreira - rafaeldff [at] gmail [dot] com)
	* Serialization support
----------------------------------------
2010-03-16 v1.0.0
	* Initial version