@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Language\SwitcherTest.cs" />
     <Compile Include="XmlSerializer.cs" />
     <Compile Include="EnumTest.cs" />
     <Compile Include="Fixtures\EnumFixture.cs" />
