@@ -1,0 +1,35 @@
+﻿using Dnfeitosa.Enums.Language;
+using Microsoft.VisualStudio.TestTools.UnitTesting;
+
+namespace Dnfeitosa.Enums.Tests.Language
+{
+    [TestClass]
+    public class SwitcherTest
+    {
+        [TestMethod]
+        public void ShouldSwitchAccordinglyToTargetValue()
+        {
+            var switcher = new Switcher<string, long>();
+            Assert.AreEqual(
+                3,
+                switcher
+                    .When("the answer to life, universe, everything").Do(() => 42)
+                    .When("round(pi)").Do(() => 3)
+                    .Default().Do(() => 0)
+                    .ConsiderThisCase("round(pi)"));
+        }
+
+        [TestMethod]
+        public void ShouldGoForTheDefaultCase()
+        {
+            var switcher = new Switcher<string, long>();
+            Assert.AreEqual(
+                550,
+                switcher
+                    .When("the answer to life, universe, everything").Do(() => 42)
+                    .When("round(pi)").Do(() => 3)
+                    .Default().Do(() => 550)
+                    .ConsiderThisCase("ansdasd"));
+        }
+    }
+}
