@@ -47,6 +47,8 @@
   <ItemGroup>
     <Compile Include="Enum.cs" />
     <Compile Include="IEnum.cs" />
+    <Compile Include="Language\Case.cs" />
+    <Compile Include="Language\Switcher.cs" />
     <Compile Include="NoEnumConstException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Registry.cs" />
